rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-26.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
definition: ~
description: ~
template_type: "template:template_key"
group: ~

