rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-29.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
definition: "template:template_key"
description: ~
template_type: string
group: ~

