rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples-30.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
definition: ~
description: text
template_type: "template:template_key"
group: text

