rumbas/src/question/snapshots/rumbas__question__variable__example_test__compile_examples.snap
---
source: rumbas/src/question/variable.rs
expression: "&example"

---
- 1.2
- "template:template_key"

